[package]
name = "sourcegen-cli"
version = "0.3.0"
authors = ["Ivan Dubrov <ivan@commure.com>"]
edition = "2018"
repository = "https://github.com/commure/sourcegen"
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
In-place Rust source generator CLI utility.
"""

[[test]]
name = "suite"
harness = false

[dependencies]
syn = { version = "1.0.0", features = ["full"] }
proc-macro2 = { version = "1.0.0", features = ["span-locations"] }
cargo_metadata = "0.8.1"
failure = "0.1.5"
tempfile = "3.0.8"
dunce = "1.0.0"

[dev-dependencies]
quote = "1.0.0"
copy_dir = "0.1.2"
pretty_assertions = "0.6.1"
