[package]
name = "sourcegen-cli"
version = "0.3.7-alpha.0"
authors = ["Commure <developers@commure.com>"]
edition = "2018"
repository = "https://github.com/commure/sourcegen"
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
In-place Rust source generator CLI utility.
"""

[[test]]
name = "suite"
harness = false

[dependencies]
syn = { version = "1.0.0", features = ["full"] }
proc-macro2 = { version = "1.0.0", features = ["span-locations"] }
quote = "1.0.0"
cargo_metadata = "0.8.1"
failure = "0.1.5"
tempfile = "3.0.8"
dunce = "1.0.0"

[dev-dependencies]
quote = "1.0.0"
copy_dir = "0.1.2"
pretty_assertions = "0.6.1"

[features]
# Disable normalizing doc comments (`#[doc = r" hello"]`) into `///`.
# On nightly, one can make `rustfmt` to do that via `normalize_doc_attributes` configuration parameter for `rustfmt`,
# but on current stable this is not supported. So we support doing our own normalization by default. This feature
# is to disable that normalization
disable_normalize_doc_attributes = []

default = []
