[package]
name = "sourcegen"
version = "0.2.1-alpha.0"
authors = ["Ivan Dubrov <ivan@commure.com>"]
edition = "2018"
repository = "https://github.com/commure/sourcegen"
license = "MIT/Apache-2.0"
readme = "../README.md"
description = """
This crate contains a procedural macro to work together with "sourcegen-cli" crate.
"""

[lib]
proc-macro = true
